fix[pre]: pre style -> white-space: pre-wrap

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -93,7 +93,7 @@ h6:before {
 /* h1~h6 end */
 /* code block */
 pre {
-  white-space: normal;
+  white-space: pre-wrap;
   padding: 0px;
 }
 pre code {
