--- a/assets/less/utils.less
+++ b/assets/less/utils.less
@@ -75,7 +75,7 @@ h6 {
 
 /* code block */
 pre {
-  white-space: normal;
+  white-space: pre-wrap;
   padding: 0px;
 
   code {
